# Toop

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Toop.sln  config.json  docker-compose.yml
Toop/: CMakeLists.txt  Toop.vcxproj  Toop.vcxproj.filters  imgui.ini  main.cpp
Toop/inc/: AppRunner.h  DebugContext.h  DebugManager.h  DebugUI.h  InputHandler.h  RaySnapshot.h
Toop/src/: AppRunner.cpp  DebugManager.cpp  DebugUI.cpp  InputHandler.cpp
Toop_Bench/: CMakeLists.txt
Toop_Bench/params/: k_integrate.json  k_integration.json  k_pack_positions.json  k_solve_constraints.json  k_update_roots.json
Toop_Bench/scripts/: parse_results.py  query_kernel_info.py  run_ncu_sweep.py  run_nsys.py  run_perf.sh  run_valgrind.py
Toop_CPU/: CMakeLists.txt  Toop_CPU.vcxproj  Toop_CPU.vcxproj.filters
Toop_CPU/inc/: CLParser.h  Camera.h  Config.h  FibonacciSphere.h  RayUtils.h  SpherePhysics.h
Toop_CPU/src/: CLParser.cpp  Camera.cpp  Config.cpp  FibonacciSphere.cpp  RayUtils.cpp  SpherePhysics.cpp
Toop_GPU/: CMakeLists.txt  Toop_GPU.vcxproj  Toop_GPU.vcxproj.filters  placeholder.cpp
Toop_GPU/inc/cpu/: DebugRenderer.h  HairSimulator.h  Renderer.h  ShaderProgram.h  Window.h
Toop_GPU/inc/gpu/: CudaTimer.cuh  HairSim.cuh
Toop_GPU/shaders/: hair_frag.glsl  room_vert.glsl  sphere_frag.glsl  sphere_vert.glsl
Toop_GPU/src/cpu/: DebugRenderer.cpp  Renderer.cpp  ShaderProgram.cpp  Window.cpp
Toop_GPU/src/gpu/: HairSim.cu  HairSimulator.cu
Toop_Tests/: CLParserTests.cpp  CMakeLists.txt  CameraTests.cpp  ConfigTests.cpp  FibonacciSphereTests.cpp  HairSimulatorTests.cpp  ShaderProgramTests.cpp  SpherePhysicsTests.cpp  TestHelpers.h  Toop_Tests.vcxproj  pch.h
Toop_js/: README.md  index.html  package-lock.json  package.json  vite.config.js
Toop_js/src/: HairSimulation.js  Sphere.js  StrandGeometry.js  config.js  main.js
Toop_js/src/debug/: DebugManager.js  RaySnapshot.js
Toop_js/src/ray/: CustomRaycaster.js  RaycasterContext.js  RaycasterStrategy.js  ThreeRaycaster.js
Toop_js/src/shaders/: constraint_lambda.glsl  ground_collision.glsl  integrate.glsl  solve_constraints.glsl  sphere_collision.glsl  strand_frag.glsl  strand_vert.glsl  translate_all.glsl  update_velocity.glsl
Toop_js/src/sphere/: Sphere.js  SphereCharacter.js  SphereEyes.js  SpherePhysics.js
Toop_js/src/utils/: rayUtils.js
cmake/: targets.cmake
docs/: dev-guide.md  perf-cuda-results.md  readme-cpp.md
scripts/: setup-aws.sh
